--- a/src/style.css
+++ b/src/style.css
@@ -16,17 +16,14 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -47,7 +44,8 @@ h1 {
 }
 
 #editor {
-  flex: 1;
+  width: 100%;
+  height: 100%;
 }
 
 #editor-preview {
