--- a/src/style.css
+++ b/src/style.css
@@ -100,6 +100,10 @@ h1 {
   position: relative;
 }
 
+.preview-line:not(.empty-line) {
+  padding: 0.5rem;
+}
+
 .preview-spacer-container:nth-child(even) {
   background-color: #f8f9fa;
 }
