--- a/src/style.css
+++ b/src/style.css
@@ -90,20 +90,20 @@ body {
   display: flex;
   width: 100%;
   flex: 1;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .editor-half,
 .output-half {
-  flex: 1;
-  height: 100%;
+  width: 50%;
+  flex-shrink: 0;
+  height: fit-content;
 }
 
 .editor-half {
 }
 
 .output-half {
-  overflow-y: auto;
   background: #f5f5f5;
 }
 
@@ -126,7 +126,7 @@ h1 {
 
 #editor {
   width: 100%;
-  height: 100%;
+  flex: 1;
 }
 
 #editor-preview {
@@ -147,7 +147,6 @@ h1 {
 }
 
 #output {
-  height: 100%;
   font-size: 14px;
   font-family: 'Fira Code', Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
