--- a/src/style.css
+++ b/src/style.css
@@ -166,6 +166,11 @@ h1 {
   border-left: 2px solid #9ca3af;
 }
 
+.output-container-invisible {
+  padding: 0.5rem;
+  padding-left: 0.75rem;
+}
+
 .output-line {
   position: relative;
 }
