--- a/src/style.css
+++ b/src/style.css
@@ -198,11 +198,20 @@ h1 {
   border-top: 1px solid rgba(156, 163, 175, 0.4);
 }
 
+.output-group-invisible {
+  border-top: none;
+}
+
 .output-container {
   padding: 0.5rem;
   padding-left: 0.75rem;
   background: #f3f4f6;
   border-left: 2px solid #9ca3af;
+}
+
+.output-container-invisible {
+  background: transparent;
+  border-left: none;
 }
 
 .output-line {
