--- a/web/src/style.css
+++ b/web/src/style.css
@@ -496,6 +496,16 @@ h1 {
   margin-bottom: 0.25em;
   font-weight: 600;
   line-height: 1.3;
+  text-align: left;
+}
+
+.output-item.output-markdown h1:first-child,
+.output-item.output-markdown h2:first-child,
+.output-item.output-markdown h3:first-child,
+.output-item.output-markdown h4:first-child,
+.output-item.output-markdown h5:first-child,
+.output-item.output-markdown h6:first-child {
+  margin-top: 0;
 }
 
 .output-item.output-markdown h1 { font-size: 1.5em; }
@@ -506,10 +516,19 @@ h1 {
   margin: 0.5em 0;
 }
 
+.output-item.output-markdown p:first-child {
+  margin-top: 0;
+}
+
 .output-item.output-markdown ul,
 .output-item.output-markdown ol {
   margin: 0.5em 0;
   padding-left: 1.5em;
+}
+
+.output-item.output-markdown ul:first-child,
+.output-item.output-markdown ol:first-child {
+  margin-top: 0;
 }
 
 .output-item.output-markdown li {
